// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with 1 message 1`] = `
<RCTScrollView
  eyboardDismissMode="interactive"
  onContentSizeChange={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "height": 1174,
        "left": 0,
        "padding": 20,
        "position": "absolute",
        "right": 0,
        "top": 90,
      },
      Object {
        "marginTop": "0",
      },
    ]
  }
>
  <View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "borderRadius": 12,
              "borderWidth": 0,
              "marginBottom": 5,
              "maxWidth": 200,
              "overflow": "hidden",
              "padding": 8,
              "textAlign": "left",
            },
            Object {
              "backgroundColor": "rgb(0, 122, 255)",
              "color": "white",
            },
          ]
        }
      >
        hello
      </Text>
    </View>
  </View>
</RCTScrollView>
`;

exports[`renders correctly with no message 1`] = `
<RCTScrollView
  eyboardDismissMode="interactive"
  onContentSizeChange={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "height": 1174,
        "left": 0,
        "padding": 20,
        "position": "absolute",
        "right": 0,
        "top": 90,
      },
      Object {
        "marginTop": "0",
      },
    ]
  }
>
  <View />
</RCTScrollView>
`;
